--- a/tps.html
+++ b/tps.html
@@ -1,12 +1,33 @@
-//HTML code for webpage
+//HTML code for Account Creation webpage
+
 
 <!DOCTYPE html>
 <html>
-<title>Page Title</title>
+<title>TPS Staff Request</title>
 <body>
 
 <h1>Taylor's Professional Services</h1>
 <p>TPS Staffing Request Form.</p>
 
+   First name:<br>
+  <input type="text" name="firstname" value="">
+  <br>
+  Last name:<br>
+  <input type="text" name="lastname" value="">
+  <br>
+  Company Name:<br>
+  <input type="text" name="company" value="">
+  <br>
+  Username:<br>
+  <input type="text" name="username" value="">
+  <br>
+  Password:<br>
+  <input type="text" name="password" value="">
+  <br>
+  Verify Password:<br>
+  <input type="text" name="verifypassword" value="">
+  <br><br>
+  
+  
 </body>
 </html>
