--- a/tpsStaffAccountCreation.html
+++ b/tpsStaffAccountCreation.html
@@ -1,26 +1,54 @@
 //html code for Staff account creation webpage
 <!DOCTYPE html>
+
 <html>
+
 <body>
 
+Staff Account Creation
+<br>
+
   First name:<br>
+
   <input type="text" name="firstname" value="">
+
   <br>
+
   Last name:<br>
+
   <input type="text" name="lastname" value="">
-  <br>
-   Profession:<br>
-  <input type="text" name="profession" value="ie. Engineer">
+
   <br>
 
    Location:<br>
-  <input type="text" name="location" value="ie. Chicago">
-  <br> 
- Education<br>
-  <input type="radio" name="education" value="Associates" checked> Associates
-  <input type="radio" name="education" value="Bachelors"> Bachelors
-  <input type="radio" name="education" value="Masters"> Masters
-  <br>
 
+  <input type="text" name="location" value="ie. Chicago">
+
+  <br> 
+
+ Education<br>
+  <select>
+  <option name = "education" value="Associates">Associates</option>
+  <option name = "education" value="Bachelors">Bachelors</option>
+  <option name = "education" value="Masters">Masters</option>
+  <option name = "education" value="N/A">N/A</option>
+</select> 
+<br>
+  Profession:<br>
+
+ <select>
+  <option name = "profession" value="Engineer">Engineer</option>
+  <option name = "profession" value="Electrician">Electrician</option>
+  <option name = "profession" value="Scientist">Scientist</option>
+  <option name = "profession" value="Developer">Developer</option>
+  </select>
+
+  <br>
+Upload Resume
+<br><br>
+Upload Photo
+<br><br>
+<button type="button">Submit</button> <button type="button">Cancel</button> 
 </body>
-</html>
+
+</html
