--- a/tpsClientAccountCreation.html
+++ b/tpsClientAccountCreation.html
@@ -1,33 +1,56 @@
 //HTML code for Account Creation webpage
 
 
+
 <!DOCTYPE html>
+
 <html>
-<title>TPS Staff Request</title>
 <body>
 
-<h1>Taylor's Professional Services</h1>
-<p>TPS Staffing Request Form.</p>
+<p>New Client Registration.</p>
+
+
 
    First name:<br>
+
   <input type="text" name="firstname" value="">
+
   <br>
+
   Last name:<br>
+
   <input type="text" name="lastname" value="">
+
   <br>
+
   Company Name:<br>
+
   <input type="text" name="company" value="">
+
   <br>
+
   Username:<br>
+
   <input type="text" name="username" value="">
+
   <br>
+
   Password:<br>
+
   <input type="text" name="password" value="">
+
   <br>
+
   Verify Password:<br>
+
   <input type="text" name="verifypassword" value="">
+
   <br><br>
+
+  <button type="button">Submit</button> <button type="button">Cancel</button> 
+
   
-  
+
 </body>
+
 </html>
