--- a/tpsStaffRequest.html
+++ b/tpsStaffRequest.html
@@ -1,1 +1,57 @@
 
+<!DOCTYPE html>
+
+<html>
+
+<body>
+
+
+<p>New Staff Request.</p>
+
+   Job Title<br>
+
+  <select>
+
+  <option name = "profession" value="Engineer">Engineer</option>
+
+  <option name = "profession" value="Electrician">Electrician</option>
+
+  <option name = "profession" value="Scientist">Scientist</option>
+
+  <option name = "profession" value="Developer">Developer</option>
+
+  </select>
+
+  <br>
+
+  Job Type:<br>
+
+  <form>
+  <input type="radio" name="jobType" value="fullTime" checked> Fulltime<br>
+  <input type="radio" name="jobType" value="partTime"> PartTime
+</form> 
+
+
+
+  Salary:<br>
+
+  <input type="text" name="salary" value="">
+
+  <br>
+
+  Start Date:<br>
+
+  <input type="text" name="startDate" value="xx/xx/xx">
+
+  <br>
+   End Date:<br>
+
+  <input type="text" name="endDate" value="xx/xx/xx">
+
+  <br>
+  
+<button type="button">Submit</button> <button type="button">Cancel</button> 
+
+</body>
+
+</html>
