--- a/tpsLoginPage.html
+++ b/tpsLoginPage.html
@@ -6,10 +6,20 @@
 
 <body>
 
+<p>Taylor's Professional Services Login Page.</p>
 
-<p>Client Main Page.</p>
-  
-<button type="button">Create New Staff Request</button> <button type="button">View Staff Request</button> 
+ Username:<br>
+  <input type="text" name="username" value="">
+  <br>
+  Password:<br>
+  <input type="password" name="password" value="">
+  <br>
+  <form>
+    <input type="radio" name="usertype" value="Client" checked> Client
+    <input type="radio" name="usertype" value="Client"> Staff
+    <br>
+  </form>
+<button type="button">Login</button> <button type="button">Cancel</button> 
 
 </body>
 
