--- a/tpsLoginPage.html
+++ b/tpsLoginPage.html
@@ -16,7 +16,8 @@
   <br>
   <form>
     <input type="radio" name="usertype" value="Client" checked> Client
-    <input type="radio" name="usertype" value="Client"> Staff
+    <input type="radio" name="usertype" value="Staff"> Staff
+   <input type="radio" name="usertype" value="Admin"> Admin
     <br>
   </form>
 <button type="button">Login</button> <button type="button">Cancel</button> 
