--- a/tpsLoginPage.html
+++ b/tpsLoginPage.html
@@ -20,7 +20,7 @@
    <input type="radio" name="usertype" value="Admin"> Admin
     <br>
   </form>
-<button type="button">Login</button> <button type="button">Cancel</button> 
+<button type="button">Login</button> <button type="button">Cancel</button><button type="button">Create New Account</button> 
 
 </body>
 
