--- a/tpsLoginPage.html
+++ b/tpsLoginPage.html
@@ -1,10 +1,12 @@
 //html file for login page
 
+
 <!DOCTYPE html>
 
 <html>
 
 <body>
+
 
 <p>Taylor's Professional Services Login Page.</p>
 
@@ -16,11 +18,13 @@
   <br>
   <form>
     <input type="radio" name="usertype" value="Client" checked> Client
-    <input type="radio" name="usertype" value="Staff"> Staff
-   <input type="radio" name="usertype" value="Admin"> Admin
+    <input type="radio" name="usertype" value="Client"> Staff
+    <input type="radio" name="usertype" value="Manager"> Manager
     <br>
   </form>
-<button type="button">Login</button> <button type="button">Cancel</button><button type="button">Create New Account</button> 
+<button type="button">Login</button> <!-- to tpsLoginPage.html-->
+<button type="button">Cancel</button> <!-- -->
+<button type="button">Create New Account</button> <!-- to tpsClientAccountCreation.html-->
 
 </body>
 
