--- a/tpsStaffRequest.html
+++ b/tpsStaffRequest.html
@@ -5,7 +5,6 @@
 
 <body>
 
-
 <p>New Staff Request.</p>
 
    Job Title<br>
@@ -19,19 +18,32 @@
   <option name = "profession" value="Scientist">Scientist</option>
 
   <option name = "profession" value="Developer">Developer</option>
+  
+  <option name = "profession" value="Web Developer">Web Designer</option>
+    
+  <option name = "profession" value="Database Administrator">Database Administrator</option>
+  
+  <option name = "profession" value="Project Manager">Project Manager</option>
+  
+  <option name = "profession" value="Network Administrator">Network Administrator</option>
+
+  <option name = "profession" value="Security Analyst">Security Analyst</option>
+  
+  <option name = "profession" value="Customer Support">Customer Support</option>
 
   </select>
-
+   
   <br>
 
   Job Type:<br>
 
   <form>
+
   <input type="radio" name="jobType" value="fullTime" checked> Fulltime<br>
+
   <input type="radio" name="jobType" value="partTime"> PartTime
+
 </form> 
-
-
 
   Salary:<br>
 
@@ -40,16 +52,17 @@
   <br>
 
   Start Date:<br>
-
+   
   <input type="text" name="startDate" value="xx/xx/xx">
-
+   
   <br>
+
    End Date:<br>
 
   <input type="text" name="endDate" value="xx/xx/xx">
 
   <br>
-  
+
 <button type="button">Submit</button> <button type="button">Cancel</button> 
 
 </body>
