--- a/tpsStaffAccountCreation.html
+++ b/tpsStaffAccountCreation.html
@@ -41,6 +41,12 @@ Staff Account Creation
   <option name = "profession" value="Electrician">Electrician</option>
   <option name = "profession" value="Scientist">Scientist</option>
   <option name = "profession" value="Developer">Developer</option>
+  <option name = "profession" value="Web Developer">Web Designer</option>
+  <option name = "profession" value="Database Administrator">Database Administrator</option>
+  <option name = "profession" value="Project Manager">Project Manager</option>
+  <option name = "profession" value="Network Administrator">Network Administrator</option>
+  <option name = "profession" value="Security Analyst">Security Analyst</option>
+  <option name = "profession" value="Customer Support">Customer Support</option>
   </select>
 
   <br>
