--- a/tpsClientMainPage.html
+++ b/tpsClientMainPage.html
@@ -2,14 +2,31 @@
 
 <!DOCTYPE html>
 
+
+
 <html>
+<style>
+body {
+background-color:hsl(0,0%,88%);
+}
+</style>
+
 
 <body>
+<center>
 
-<p>Client Main Page.</p>
-  
+
+<h1>Client Main Page</h1>
+<hr />
+<p1>Welcome to the TPS Client Page. Please use the buttons below to either create a new request or to view an existing staff request.</p1>
+  <hr />
+<br><br><br>
 <button type="button">Create New Staff Request</button> <button type="button">View Staff Request</button> 
+<hr />
 
+</center>
 </body>
+
+
 
 </html>
